Added link to the new mentors page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		  <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons white-text">menu</i></a>
 
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="mentors1.html" class="hoverable white-text">Student Mentors</a></li>
+                    <li><a href="mentors_2018.html" class="hoverable white-text">Student Mentors</a></li>
                     <li><a href="acad1.html" class="hoverable white-text">Academics</a></li>
                     <li><a href="life.html" class="hoverable white-text">Life @ IITBh</a></li>
                     <li><a href="around1.html" class="hoverable white-text">Around IITBh</a></li>
@@ -68,7 +68,7 @@
 
 
 		  <ul id="nav-mobile" class="side-nav">
-				<li class="bold"><a href="mentors1.html" class="waves-effect waves-ripple hoverable">Student Mentors</a></li>
+				<li class="bold"><a href="mentors_2018.html" class="waves-effect waves-ripple hoverable">Student Mentors</a></li>
         <li>
           <ul class="collapsible collapsible-accordion">
             <li><a class="collapsible-header waves-effect waves-ripple hoverable"><span class="myCollapsibleHeader">Academics</span></a>
@@ -385,7 +385,7 @@
 			  <h5 class="white-text" style="font-family: 'Exo 2', sans-serif;">Menu</h5>
 			  <ul class="footer_menu" style="font-family: 'Ubuntu', sans-serif;">
 				<li><a class="white-text" href="index.html">Home</a></li>
-				<li><a class="white-text" href="mentors1.html">Student Mentors</a></li>
+				<li><a class="white-text" href="mentors_2018.html">Student Mentors</a></li>
 				<li><a class="white-text" href="acad1.html">Academics</a></li>
 				<li><a class="white-text" href="life.html">Life @ IITBh</a></li>
 				<li><a class="white-text" href="around1.html">Around IITBh</a></li>
