Atempting add FAQ section

--- a/Queries.html
+++ b/Queries.html
@@ -49,8 +49,7 @@
 
 			<nav class="nav-extended #00b0ff light-blue accent-3 z-depth-5">
 
-				<div class="nav-wrapper container
-">
+				<div class="nav-wrapper container">
 					<a href="index.html" class="brand-logo white-text">POLARIS</a>
 					<a href="#" data-activates="nav-mobile" class="button-collapse">
 						<i class="material-icons white-text">menu</i>
@@ -235,6 +234,18 @@
 	</div>
 	<!-- Main Content Starts here-->
 	<div class="container light">
+
+		<div class="section">
+			<div class="row center">
+				<div class="col s12">
+					<h3 class="cyan-text text-accent-4">Frequently Asked Questions</h3>
+					<p class="light" style="text-align: justify;">A small place holder for frequently asked questions. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, nisi eu aliquam fermentum, mi nulla luctus erat, sed maximus purus leo vel sapien. Suspendisse cursus, magna eget tristique accumsan, ex massa ullamcorper turpis, quis dictum nibh sem in diam. Morbi pellentesque, massa vitae faucibus viverra, lacus nisi feugiat elit, ac tincidunt massa magna quis nisi. Aenean eu pretium nibh. Nunc lobortis sagittis nisi. Praesent a orci massa.</p>
+					<h4 class="teal-text text-accent-4">First Semester</h4>
+
+				</div>
+			</div>
+		</div>
+
 		<div id="fb-root"></div>
 		<script>
 			(function (d, s, id) {
@@ -254,6 +265,7 @@
 			  data-numposts="5">
 			</div>
 		</div>
+
 		<br>
 		<br>
 	</div>
