--- a/Queries.html
+++ b/Queries.html
@@ -240,11 +240,17 @@
 				<div class="col s12">
 					<h3 class="cyan-text text-accent-4">Frequently Asked Questions</h3>
 					<p class="light" style="text-align: justify;">A small place holder for frequently asked questions. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, nisi eu aliquam fermentum, mi nulla luctus erat, sed maximus purus leo vel sapien. Suspendisse cursus, magna eget tristique accumsan, ex massa ullamcorper turpis, quis dictum nibh sem in diam. Morbi pellentesque, massa vitae faucibus viverra, lacus nisi feugiat elit, ac tincidunt massa magna quis nisi. Aenean eu pretium nibh. Nunc lobortis sagittis nisi. Praesent a orci massa.</p>
-					<h4 class="teal-text text-accent-4">First Semester</h4>
-
 				</div>
 			</div>
+
+			<h5 class="teal-text text-accent-4">A super random question one?</h5>
+			<p> A random answer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, nisi eu aliquam fermentum, mi nulla luctus erat, sed maximus purus leo vel sapien. Suspendisse cursus, magna eget tristique accumsan, ex massa ullamcorper turpis, quis dictum nibh sem in diam. Morbi pellentesque, massa vitae faucibus viverra, lacus nisi feugiat elit, ac tincidunt massa magna quis nisi. Aenean eu pretium nibh. Nunc lobortis sagittis nisi. Praesent a orci massa.</p>
+
+			<h5 class="teal-text text-accent-4">Another super random question one?</h5>
+			<p> A random answer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, nisi eu aliquam fermentum, mi nulla luctus erat, sed maximus purus leo vel sapien. Suspendisse cursus, magna eget tristique accumsan, ex massa ullamcorper turpis, quis dictum nibh sem in diam. Morbi pellentesque, massa vitae faucibus viverra, lacus nisi feugiat elit, ac tincidunt massa magna quis nisi. Aenean eu pretium nibh. Nunc lobortis sagittis nisi. Praesent a orci massa.</p>
 		</div>
+
+		<div class="divider"></div>
 
 		<div id="fb-root"></div>
 		<script>
@@ -260,6 +266,11 @@
 		<br>
 		<br>
 		<!-- This is the display div -->
+		<div class="row center">
+			<div class="col s12">
+				<h3 class="cyan-text text-accent-4">Have some more questions?</h3>
+			</div>
+		</div>
 		<div class="z-depth-2" style="width: 80%; margin: 0 auto;overflow-x: auto;">
 			<div class="fb-comments" data-href="https://s3.amazonaws.com/aws-website-pramodhrachuri-smp-final-53icd/Queries.html" data-width="100%"
 			  data-numposts="5">
