Decreased width of questions section

--- a/Queries.html
+++ b/Queries.html
@@ -243,11 +243,14 @@
 				</div>
 			</div>
 
-			<h5 class="teal-text text-accent-4">A super random question one?</h5>
-			<p> A random answer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, nisi eu aliquam fermentum, mi nulla luctus erat, sed maximus purus leo vel sapien. Suspendisse cursus, magna eget tristique accumsan, ex massa ullamcorper turpis, quis dictum nibh sem in diam. Morbi pellentesque, massa vitae faucibus viverra, lacus nisi feugiat elit, ac tincidunt massa magna quis nisi. Aenean eu pretium nibh. Nunc lobortis sagittis nisi. Praesent a orci massa.</p>
+			<div style="width: 90%; margin: 0 auto;overflow-x: auto;">
 
-			<h5 class="teal-text text-accent-4">Another super random question one?</h5>
-			<p> A random answer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, nisi eu aliquam fermentum, mi nulla luctus erat, sed maximus purus leo vel sapien. Suspendisse cursus, magna eget tristique accumsan, ex massa ullamcorper turpis, quis dictum nibh sem in diam. Morbi pellentesque, massa vitae faucibus viverra, lacus nisi feugiat elit, ac tincidunt massa magna quis nisi. Aenean eu pretium nibh. Nunc lobortis sagittis nisi. Praesent a orci massa.</p>
+				<h5 class="teal-text text-accent-4">A super random question one?</h5>
+				<p> A random answer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, nisi eu aliquam fermentum, mi nulla luctus erat, sed maximus purus leo vel sapien. Suspendisse cursus, magna eget tristique accumsan, ex massa ullamcorper turpis, quis dictum nibh sem in diam. Morbi pellentesque, massa vitae faucibus viverra, lacus nisi feugiat elit, ac tincidunt massa magna quis nisi. Aenean eu pretium nibh. Nunc lobortis sagittis nisi. Praesent a orci massa.</p>
+
+				<h5 class="teal-text text-accent-4">Another super random question one?</h5>
+				<p> A random answer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, nisi eu aliquam fermentum, mi nulla luctus erat, sed maximus purus leo vel sapien. Suspendisse cursus, magna eget tristique accumsan, ex massa ullamcorper turpis, quis dictum nibh sem in diam. Morbi pellentesque, massa vitae faucibus viverra, lacus nisi feugiat elit, ac tincidunt massa magna quis nisi. Aenean eu pretium nibh. Nunc lobortis sagittis nisi. Praesent a orci massa.</p>
+			</div>
 		</div>
 
 		<div class="divider"></div>
