--- a/mentors_2018.html
+++ b/mentors_2018.html
@@ -157,8 +157,8 @@
 				                <p><i class="material-icons left">book</i><small>ME Dept 2017</small></p>
 				                <p><i class="material-icons left">home</i><small>Pathanamthitta, Kerala</small></p>
 				                <p><i class="material-icons left">call</i><small>7470526600</small></p>
-												<p><i class="material-icons left">email</i><small>cs16b1018@iitbhilai.ac.in</small></p>
-				                <p style="text-align: center;"><a href="https://www.facebook.com/naman.samarth"><i class="fa fa-facebook"></i>acebook Profile</a></p>
+				                <p><i class="material-icons left">email</i><small>cs16b1018@iitbhilai.ac.in</small></p>
+				                <!-- <p style="text-align: center;"><a href="https://www.facebook.com/naman.samarth"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
 							</div>
 						</div>
 					</div>
@@ -176,8 +176,8 @@
 			                <p><i class="material-icons left">book</i><small>ME Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Pune, Maharashtra</small></p>
 			                <p><i class="material-icons left">call</i><small>8949726855</small></p>
-											<p><i class="material-icons left">email</i><small>adwaitp@iitbhilai.ac.in</small></p>
-			                <p style="text-align: center;"><a href="https://www.facebook.com/rudrashishpal"><i class="fa fa-facebook"></i>acebook Profile</a></p>
+			                <p><i class="material-icons left">email</i><small>adwaitp@iitbhilai.ac.in</small></p>
+			                <!-- <p style="text-align: center;"><a href="https://www.facebook.com/rudrashishpal"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
 								</div>
 						</div>
 					</div>
@@ -196,7 +196,7 @@
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>??????</small></p>
 			                <p><i class="material-icons left">call</i><small>9521205979</small></p>
-											<p><i class="material-icons left">email</i><small>aniketr@iitbhilai.ac.in</small></p>
+			                <p><i class="material-icons left">email</i><small>aniketr@iitbhilai.ac.in</small></p>
 			                <p style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=100010720866538"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
@@ -219,8 +219,8 @@
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Guwahati, Assam</small></p>
 			                <p><i class="material-icons left">call</i><small>???????</small></p>
-											<p><i class="material-icons left">email</i><small>antarap@iitbhilai.ac.in</small></p>
-			                <p style="text-align: center;"><a href="https://www.facebook.com/priyesh.pandey.144"><i class="fa fa-facebook"></i>acebook Profile</a></p>
+							<p><i class="material-icons left">email</i><small>antarap@iitbhilai.ac.in</small></p>
+			                <!-- <p style="text-align: center;"><a href="https://www.facebook.com/priyesh.pandey.144"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
 						</div>
 					</div>
 				</div>
@@ -238,8 +238,8 @@
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Jaipur, Rajasthan</small></p>
 			                <p><i class="material-icons left">call</i><small>7976521104</small></p>
-											<p><i class="material-icons left">email</i><small>gauravv@iitbhilai.ac.in</small></p>
-			                <p style="text-align: center;"><a href="https://www.facebook.com/anant.kumar.771"><i class="fa fa-facebook"></i>acebook Profile</a></p>
+							<p><i class="material-icons left">email</i><small>gauravv@iitbhilai.ac.in</small></p>
+			                <!-- <p style="text-align: center;"><a href="https://www.facebook.com/anant.kumar.771"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
 						</div>
 					</div>
 				</div>
@@ -257,7 +257,7 @@
 			                <p><i class="material-icons left">book</i><small>ME Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Ajmer,Rajasthan</small></p>
 			                <p><i class="material-icons left">call</i><small>7389643344</small></p>
-											<p><i class="material-icons left">email</i><small>me16b1026@iitbhilai.ac.in</small></p>
+			                <p><i class="material-icons left">email</i><small>??????</small></p>
 			                <p style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=100003270173240"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
@@ -280,7 +280,7 @@
 			                <p><i class="material-icons left">book</i><small>EE Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Haldwani, Uttarakhand</small></p>
 			                <p><i class="material-icons left">call</i><small>7389888989</small></p>
-											<p><i class="material-icons left">email</i><small>me16b1016@iitbhilai.ac.in</small></p>
+			                <p><i class="material-icons left">email</i><small>????</small></p>
 			                <p style="text-align: center;"><a href="https://www.facebook.com/naman.pujari"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
@@ -300,8 +300,8 @@
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2016</small></p>
 			                <p><i class="material-icons left">home</i><small>Lucknow , Uttar Pradesh</small></p>
 			                <p><i class="material-icons left">call</i><small>?????</small></p>
-											<p><i class="material-icons left">email</i><small>ee16b1016@iitbhilai.ac.in</small></p>
-			                <p style="text-align: center;"><a href="https://www.facebook.com/mayank.sharma.52206654"><i class="fa fa-facebook"></i>acebook Profile</a></p>
+			                <p><i class="material-icons left">email</i><small>???</small></p>
+			                <!-- <p style="text-align: center;"><a href="https://www.facebook.com/mayank.sharma.52206654"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
 						</div>
 					</div>
 				</div>
@@ -320,7 +320,7 @@
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Kolkata, West Bengal</small></p>
 			                <p><i class="material-icons left">call</i><small>8777266581</small></p>
-											<p><i class="material-icons left">email</i><small>ee16b1040@iitbhilai.ac.in</small></p>
+			                <p><i class="material-icons left">email</i><small>ee16b1040@iitbhilai.ac.in</small></p>
 			                <p style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=100007015189401"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
@@ -343,7 +343,7 @@
 			                <p><i class="material-icons left">book</i><small>2nd Year, ME Dept</small></p>
 			                <p><i class="material-icons left">home</i><small>Lakhisarai, Bihar</small></p>
 			                <p><i class="material-icons left">call</i><small>8011932320</small></p>
-											<p><i class="material-icons left">email</i><small>me16b1007@iitbhilai.ac.in</small></p>
+			                <p><i class="material-icons left">email</i><small>me16b1007@iitbhilai.ac.in</small></p>
 			                <p style="text-align: center;"><a href="https://www.facebook.com/amiay.narayan"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
@@ -362,7 +362,7 @@
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Buldana, Maharashtra</small></p>
 			                <p><i class="material-icons left">call</i><small>9922881015</small></p>
-											<p><i class="material-icons left">email</i><small>me16b1032@iitbhilai.ac.in</small></p>
+			                <p><i class="material-icons left">email</i><small>me16b1032@iitbhilai.ac.in</small></p>
 			                <p style="text-align: center;"><a href="https://www.facebook.com/sourabhgite007"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
@@ -382,7 +382,7 @@
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2016</small></p>
 			                <p><i class="material-icons left">home</i><small>Varanasi, Uttar Pradesh</small></p>
 			                <p><i class="material-icons left">call</i><small>8744997678</small></p>
-											<p><i class="material-icons left">email</i	><small>shivams@iitbhilai.ac.in</small></p>
+			                <p><i class="material-icons left">email</i	><small>shivams@iitbhilai.ac.in</small></p>
 			                <p style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=100005929247409"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
