Updated Mantors 2018 page

--- a/mentors_2018.html
+++ b/mentors_2018.html
@@ -158,7 +158,7 @@
 				                <p><i class="material-icons left">home</i><small>Pathanamthitta, Kerala</small></p>
 				                <p><i class="material-icons left">call</i><small>7470526600</small></p>
 				                <p><i class="material-icons left">email</i><small>cs16b1018@iitbhilai.ac.in</small></p>
-				                <!-- <p style="text-align: center;"><a href="https://www.facebook.com/naman.samarth"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
+				                <p style="text-align: center;"><a href="https://www.facebook.com/naman.samarth"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 							</div>
 						</div>
 					</div>
@@ -177,7 +177,7 @@
 			                <p><i class="material-icons left">home</i><small>Pune, Maharashtra</small></p>
 			                <p><i class="material-icons left">call</i><small>8949726855</small></p>
 			                <p><i class="material-icons left">email</i><small>adwaitp@iitbhilai.ac.in</small></p>
-			                <!-- <p style="text-align: center;"><a href="https://www.facebook.com/rudrashishpal"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
+			                <p style="text-align: center;"><a href="https://www.facebook.com/adwait.parasnis"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 								</div>
 						</div>
 					</div>
@@ -218,7 +218,7 @@
 			                <br/>
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Guwahati, Assam</small></p>
-			                <p><i class="material-icons left">call</i><small>???????</small></p>
+			                <p><i class="material-icons left">call</i><small>8005622406</small></p>
 							<p><i class="material-icons left">email</i><small>antarap@iitbhilai.ac.in</small></p>
 			                <!-- <p style="text-align: center;"><a href="https://www.facebook.com/priyesh.pandey.144"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
 						</div>
@@ -239,7 +239,7 @@
 			                <p><i class="material-icons left">home</i><small>Jaipur, Rajasthan</small></p>
 			                <p><i class="material-icons left">call</i><small>7976521104</small></p>
 							<p><i class="material-icons left">email</i><small>gauravv@iitbhilai.ac.in</small></p>
-			                <!-- <p style="text-align: center;"><a href="https://www.facebook.com/anant.kumar.771"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
+			                <p style="text-align: center;"><a href="https://www.facebook.com/gv99gv"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
 				</div>
@@ -252,13 +252,13 @@
 			              <span class="card-title activator grey-text text-darken-4">Nageshwar Arepally</span>
 			            </div>
 			            <div class="card-reveal" style="display: none; transform: translateY(0px);">
-			                <span class="card-title grey-text text-darken-4">Rishabh<i class="material-icons right">close</i></span>
+			                <span class="card-title grey-text text-darken-4">Nageshwar<i class="material-icons right">close</i></span>
 			                <br/>
 			                <p><i class="material-icons left">book</i><small>ME Dept 2017</small></p>
-			                <p><i class="material-icons left">home</i><small>Ajmer,Rajasthan</small></p>
+			                <p><i class="material-icons left">home</i><small>Nizamabad, Telangana</small></p>
 			                <p><i class="material-icons left">call</i><small>7389643344</small></p>
-			                <p><i class="material-icons left">email</i><small>??????</small></p>
-			                <p style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=100003270173240"><i class="fa fa-facebook"></i>acebook Profile</a></p>
+			                <p><i class="material-icons left">email</i><small>arepallyn@iitbhilai.ac.in</small></p>
+			                <!-- <p style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=100003270173240"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
 						</div>
 					</div>
 				</div>
@@ -279,8 +279,8 @@
 			                <br/>
 			                <p><i class="material-icons left">book</i><small>EE Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Haldwani, Uttarakhand</small></p>
-			                <p><i class="material-icons left">call</i><small>7389888989</small></p>
-			                <p><i class="material-icons left">email</i><small>????</small></p>
+			                <!-- <p><i class="material-icons left">call</i><small>????</small></p> -->
+			                <p><i class="material-icons left">email</i><small>npujari.hld@gmail.com</small></p>
 			                <p style="text-align: center;"><a href="https://www.facebook.com/naman.pujari"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
@@ -299,8 +299,8 @@
 			                <br/>
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2016</small></p>
 			                <p><i class="material-icons left">home</i><small>Lucknow , Uttar Pradesh</small></p>
-			                <p><i class="material-icons left">call</i><small>?????</small></p>
-			                <p><i class="material-icons left">email</i><small>???</small></p>
+			                <!-- <p><i class="material-icons left">call</i><small>?????</small></p> -->
+			                <p><i class="material-icons left">email</i><small>pallavip@iitbhilai.ac.in</small></p>
 			                <!-- <p style="text-align: center;"><a href="https://www.facebook.com/mayank.sharma.52206654"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
 						</div>
 					</div>
@@ -320,7 +320,7 @@
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Kolkata, West Bengal</small></p>
 			                <p><i class="material-icons left">call</i><small>8777266581</small></p>
-			                <p><i class="material-icons left">email</i><small>ee16b1040@iitbhilai.ac.in</small></p>
+			                <p><i class="material-icons left">email</i><small>pramitb@iitbhilai.ac.in</small></p>
 			                <p style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=100007015189401"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
@@ -340,11 +340,11 @@
 			            <div class="card-reveal" style="display: none; transform: translateY(0px);">
 			                <span class="card-title grey-text text-darken-4">Ripunjoy<i class="material-icons right">close</i></span>
 			                <br/>
-			                <p><i class="material-icons left">book</i><small>2nd Year, ME Dept</small></p>
+			                <p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Lakhisarai, Bihar</small></p>
 			                <p><i class="material-icons left">call</i><small>8011932320</small></p>
-			                <p><i class="material-icons left">email</i><small>me16b1007@iitbhilai.ac.in</small></p>
-			                <p style="text-align: center;"><a href="https://www.facebook.com/amiay.narayan"><i class="fa fa-facebook"></i>acebook Profile</a></p>
+			                <p><i class="material-icons left">email</i><small>ripunjoykalita02@gmail.com</small></p>
+			                <p style="text-align: center;"><a href="https://www.facebook.com/ripunjoy.kalita.549"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
 				</div>
@@ -362,8 +362,8 @@
 			                <p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
 			                <p><i class="material-icons left">home</i><small>Buldana, Maharashtra</small></p>
 			                <p><i class="material-icons left">call</i><small>9922881015</small></p>
-			                <p><i class="material-icons left">email</i><small>me16b1032@iitbhilai.ac.in</small></p>
-			                <p style="text-align: center;"><a href="https://www.facebook.com/sourabhgite007"><i class="fa fa-facebook"></i>acebook Profile</a></p>
+			                <p><i class="material-icons left">email</i><small>rushabhdhabe79@gmail.com</small></p>
+			                <p style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=100005203687215"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
 				</div>
@@ -383,7 +383,7 @@
 			                <p><i class="material-icons left">home</i><small>Varanasi, Uttar Pradesh</small></p>
 			                <p><i class="material-icons left">call</i><small>8744997678</small></p>
 			                <p><i class="material-icons left">email</i	><small>shivams@iitbhilai.ac.in</small></p>
-			                <p style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=100005929247409"><i class="fa fa-facebook"></i>acebook Profile</a></p>
+			                <p style="text-align: center;"><a href="https://www.facebook.com/shivam5285"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
 				</div>
@@ -405,7 +405,7 @@
 									<p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
 									<p><i class="material-icons left">home</i><small>JAIPUR , RAJASTHAN</small></p>
 									<p><i class="material-icons left">call</i><small>8949667919</small></p>
-									<p><i class="material-icons left">email</i><small>me16b1010@iitbhilai.ac.in</small></p>
+									<p><i class="material-icons left">email</i><small>shivanit@iitbhilai.ac.in</small></p>
 									<p style="text-align: center;"><a href="https://www.facebook.com/shivani.tripathi.562"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
@@ -443,9 +443,9 @@
 									<span class="card-title grey-text text-darken-4">Sumit<i class="material-icons right">close</i></span>
 									<br/>
 									<p><i class="material-icons left">book</i><small>ME Dept 2017</small></p>
-									<p><i class="material-icons left">home</i><small>Jhunjhunu, Rajasthan</small></p>
+									<p><i class="material-icons left">home</i><small>Pilani, Rajasthan</small></p>
 									<p><i class="material-icons left">call</i><small>9080652631</small></p>
-									<p><i class="material-icons left">email</i><small>me16b1010@iitbhilai.ac.in</small></p>
+									<p><i class="material-icons left">email</i><small>sumits@iitbhilai.ac.in</small></p>
 									<p style="text-align: center;"><a href="https://www.facebook.com/sumit.sheoran.980315"><i class="fa fa-facebook"></i>acebook Profile</a></p>
 						</div>
 					</div>
@@ -468,8 +468,8 @@
 									<p><i class="material-icons left">book</i><small>CSE Dept 2017</small></p>
 									<p><i class="material-icons left">home</i><small>Visakhapatnam, Andhra Pradesh</small></p>
 									<p><i class="material-icons left">call</i><small>8247481130</small></p>
-									<p><i class="material-icons left">email</i><small>me16b1010@iitbhilai.ac.in</small></p>
-									<p style="text-align: center;"><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i>acebook Profile</a></p>
+									<p><i class="material-icons left">email</i><small>ethalapakas@iitbhilai.ac.in</small></p>
+									<!-- <p style="text-align: center;"><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i>acebook Profile</a></p> -->
 						</div>
 					</div>
 				</div>
