--- a/ns1.html
+++ b/ns1.html
@@ -243,6 +243,9 @@
       <div class="row">
         <div class="col s12">
           <h3 class="header cyan-text text-accent-4 center">National Service Scheme</h3>
+          <h5 class="header light center teal-text" style="font-weight:10px; color:black ; text-align: right;">
+            <b>Secretary: Shivansh Mishra</b>
+          </h5>
           <h4 class="header">About</h4>
           <p style="text-align: justify;">NSS, National Service Scheme is a voluntary service at IIT Bhilai to remind students of their moral and social
             responsibilities towards the society. It is a program which helps students develop personality through community
@@ -271,6 +274,9 @@
           </ul>
           <br/>
           <h3 class="header cyan-text text-accent-4 center">National Sports Organisation</h3>
+          <h5 class="header light center teal-text" style="font-weight:10px; color:black ; text-align: right;">
+            <b>Secretary: Kaun Hai?</b>
+          </h5>
           <p style="text-align: justify;">NSO (National Sports Organisation) is the official sports programme of IIT Bhilai. It is included in the extra-curricular
             activities of many students of IIT Bhilai . Each student has to complete 120 hrs in eight semester. NSO includes
             all the sports provided by the Institute and students can choose any sport they like .Proper incharge are provided
