--- a/life.html
+++ b/life.html
@@ -324,7 +324,7 @@
               love those drops, then there are bass speakers for you to bounce on.</li>
             <li>○&nbsp; Both the hostels have indoor badminton courts.</li>
             <li>○&nbsp; A snooker table and other indoor games are also provided.</li>
-            <li>○&nbsp; A Table Tennis table is als there for "ping-pong" lovers.</li>
+            <li>○&nbsp; A Table Tennis table is also there for "ping-pong" lovers.</li>
             <li>○&nbsp; Ducting has been provided in hostels.</li>
           </ul>
 
