--- a/ns1.html
+++ b/ns1.html
@@ -275,7 +275,7 @@
           <br/>
           <h3 class="header cyan-text text-accent-4 center">National Sports Organisation</h3>
           <h5 class="header light center teal-text" style="font-weight:10px; color:black ; text-align: right;">
-            <b>Secretary: Kaun Hai?</b>
+            <b>Secretary: Sumit Sheron</b>
           </h5>
           <p style="text-align: justify;">NSO (National Sports Organisation) is the official sports programme of IIT Bhilai. It is included in the extra-curricular
             activities of many students of IIT Bhilai . Each student has to complete 120 hrs in eight semester. NSO includes
