Fixed typos in typos

--- a/life.html
+++ b/life.html
@@ -448,7 +448,7 @@
                 <span>
 
                   <p>
-                    <strong>Co-ordinator</strong>: Rushabh Dabe</p>
+                    <strong>Co-ordinator</strong>: Rushabh Dhabe</p>
                   <p style="text-align: justify;">Feel your feet tingling when the bass drops? Wanna learn a moonwalk or sway like Hrithik? If yes, then
                     this the place where you can let the beats have control.</p>
 
@@ -513,7 +513,7 @@
 
                   <p>
                     <strong>Co-ordinator</strong>: Rishabh Jain</p>
-                  <p style="text-align: justify;">“The most exicting acting tends to happen in the roles you never thought you could play” - John Lithgow
+                  <p style="text-align: justify;">“The most exciting acting tends to happen in the roles you never thought you could play” - John Lithgow
                     Drishya, the official drama club of iit bhilai, where you enter into a new world. You forget about yourself
                     and gain the identity of an anonymous character. Here you can be the opposite of what you are or anyone
                     you want to be. You will get a chance to act, write scripts, direct plays or you can also become a story
