--- a/Queries.html
+++ b/Queries.html
@@ -245,11 +245,43 @@
 
 			<div style="width: 90%; margin: 0 auto;overflow-x: auto;">
 
-				<h5 class="teal-text text-accent-4">A super random question one?</h5>
-				<p> A random answer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, nisi eu aliquam fermentum, mi nulla luctus erat, sed maximus purus leo vel sapien. Suspendisse cursus, magna eget tristique accumsan, ex massa ullamcorper turpis, quis dictum nibh sem in diam. Morbi pellentesque, massa vitae faucibus viverra, lacus nisi feugiat elit, ac tincidunt massa magna quis nisi. Aenean eu pretium nibh. Nunc lobortis sagittis nisi. Praesent a orci massa.</p>
+				<h5 class="teal-text text-accent-4">What are the programmes of study at IIT Bhilai?</h5>
+				<p style="text-align: justify;">
+					IIT Bhilai is currently offering four-year B.Tech., two-year M.Tech and Ph.D degree programs. The Academic system and culture of IIT Bhilai is inspired by that at IIT Hyderabad. The highlight of the academics here is the Fractal System of distributing courses across the semesters. The curriculum lays strong emphasis on developing industrial and practical skills while backing them up with a concrete theoretical foundation.
+				</p>
 
-				<h5 class="teal-text text-accent-4">Another super random question one?</h5>
-				<p> A random answer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, nisi eu aliquam fermentum, mi nulla luctus erat, sed maximus purus leo vel sapien. Suspendisse cursus, magna eget tristique accumsan, ex massa ullamcorper turpis, quis dictum nibh sem in diam. Morbi pellentesque, massa vitae faucibus viverra, lacus nisi feugiat elit, ac tincidunt massa magna quis nisi. Aenean eu pretium nibh. Nunc lobortis sagittis nisi. Praesent a orci massa.</p>
+				<h5 class="teal-text text-accent-4">What departments of study are available?</h5>
+				<p style="text-align: justify;">
+					Bachelor of Technology (B.Tech)	
+					<br>
+					Computer Science and Engineering, Electrical Engineering and Mechanical Engineering
+					<br><br>
+					Master of Technology (M. Tech) 
+					<br>
+					Computer Science and Engineering, Electrical Engineering and Mechanical Engineering
+					<br><br>
+					Doctor of Philosophy (Ph.D)	
+					<br>
+					Computer Science and Engineering, Electrical Engineering, Mechanical Engineering, Physics and Chemistry
+				</p>
+
+				<h5 class="teal-text text-accent-4">What are the opportunities of branch change for B.Tech program?</h5>
+				<p style="text-align: justify;">
+					After the first semester you are given an opportunity to change your branch. Your GPA should meet the criteria laid down by the Academic section. Tip: For a smooth branch change try to keep GPA above 9. However, cutoffs for branch change are usually relative.
+				</p>
+
+				<h5 class="teal-text text-accent-4">What are the facilities and amenities provided in the hostels?</h5>
+				<p style="text-align: justify;">
+					IIT Bhilai is a residential campus, with well facilitated student's hostels.There are four hostels namely Castle Ena, Castle Dio, Castle Tria and Castle Tessera. All hostels are equipped with some sport facilities, recreation rooms, TV room, washing machines, and dining etc. Hostels are rigged with Wi-Fi and LAN access. For more information visit <a href="life.html#facilities">Polaris Hostel Facilities</a>
+				</p>
+
+				<h5 class="teal-text text-accent-4">How is the Internet Connectivity?</h5>
+				<p style="text-align: justify;">
+					IIT Bhilai gets it's internet connection from NKN (National Knowledge Network), which is known for providing very high speed connection to IITs and other Govt institutions. There is also a high speed BSNL connection, as a backup.
+					<br>
+					Completely uncapped connection is provided to the students. There are several claims that they were getting around 120 MBps over LAN connection in hostel. Systems like proxy are avoided to ensure maximum compatibility.
+				</p>
+
 			</div>
 		</div>
 
