--- a/life.html
+++ b/life.html
@@ -312,7 +312,7 @@
           </p>
 
           <div class="divider"></div>
-          <h4 class="header cyan-text text-accent-4 center">Facilities available</h4>
+          <h4 class="header cyan-text text-accent-4 center" id="facilities">Facilities available</h4>
           <ul>
             <li>○&nbsp; Every student gets a bed, a fan, an almirah, a table and a chair in his room.</li>
             <li>○&nbsp; Toilets are commonly shared with the wing mates.</li>
